# deglib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-variants.sample.yaml
benchmark/: CMakeLists.txt
benchmark/include/: arrayview.h  benchmark.h  sift_1m.h  stopwatch.h  utils.h
benchmark/include/hnsw/: utils.h
benchmark/src/: deg_test.cpp  deglib_anns_bench.cpp  deglib_bench.cpp  deglib_build_bench.cpp  deglib_build_only.cpp  deglib_build_test.cpp  deglib_explore_bench.cpp  deglib_graph_bench.cpp  deglib_graph_stats.cpp  deglib_graph_test.cpp  deglib_groundtruth_create.cpp  deglib_knng_bench.cpp  deglib_readonly_graph_test.cpp  hnswlib_anns_bench.cpp  hnswlib_bench.cpp  hnswlib_explore_bench.cpp  hnswlib_graph_stats.cpp  sift_1b.cpp  sift_1m.cpp  sift_test.cpp
deglib/: CMakeLists.txt
deglib/include/: analysis.h  builder.h  builder_experimental.h  config.h  deglib.h  distances.h  graph.h  memory.h  optimizer.h  readonly_graph.h  repository.h  search.h
deglib/include/builder/: evenregular_builder.h
deglib/include/graph/: dynamic_graph.h  readonly_graph.h  readonly_irregular_graph.h  sizebounded_graph.h
examples/: CMakeLists.txt
examples/src/: hashmaps.cpp  hnsw_index_tests.cpp
hnswlib/: CMakeLists.txt
hnswlib/include/: bruteforce.h  hnswalg.h  hnswlib.h  space_ip.h  space_l2.h
src/benchmark/: sift_1b.cpp  sift_1m.cpp  sift_test.cpp
src/examples/: searchKnnCloserFirst_test.cpp  updates_test.cpp
